src/main/resources/scss/profile/components/_head.scss
.profile-head {
	// margin: 1rem 0.625rem;
	background: $primary-grey;
	color: white;
	position: relative;
	margin-bottom: .25rem;
	
	.username {
		font-size: $h3-font-size;
	}

	.group {
		background: #373a43;
		padding: 2rem;
		.description {
			$lineheight: 1.5em;
			font-size: .75rem;
			line-height: $lineheight; // probably already
			max-height: $lineheight * 3; // 3 lines
			overflow: hidden;
			color: $tertiary-grey;
		}
		.label {
			line-height: 1.5em;
			margin-bottom: 1rem;
		}
		.group-subhead {
			font-size: .75rem;
			font-weight: 700;
			font-family: $body-font-family;
		}
		.group-subhead-icon {

		}
	}

	position: relative;
	overflow: hidden;

	.profile-avatar-container {
		max-width: 3rem;
		min-width: 3rem;
		width: 3rem;
		height: 3rem;
		float: left;
		margin: 0.5rem;
	}

	.profile-head-summary {
	}

	img, svg {}

	.label {
		background: none;
		display: block;
		font: normal 600 1.1rem/2 $header-font-family;
		overflow: hidden;
		text-align: left;
		text-overflow: ellipsis;
		white-space: nowrap;
		padding: 0;
	}


	.actions {
		margin: 0;
		list-style: none;
	}
}



.profile-head-summary {
	padding: 0 0.625rem;
	// @include grid-column(8, $last-column: true);


	.profile-head-summary-attrs {
		clear: both;
		font-size: .6875rem;
		list-style-type: none;
		margin-left: 0;
		li {
			$icon-color: $secondary-grey;
			$icon-size: 1.5em;
			line-height: $icon-size * 1.5;
			position: relative;

			white-space: nowrap;
			overflow: hidden;
			text-overflow: ellipsis;

			&::before {
				font-family: 'icomoon';
				color: $icon-color;
				padding-right: .4em;
				position: relative;
				top: 0.1em;
				line-height: 0;
				font-size: 1.5em;
			}
			&.education {
				&::before {
					content: '\e60a';
				}
			}
			&.affiliation {
				&::before {
					content: '\e60c';
				}
			}
			&.location {
				&::before {
					content: '\e60b';
				}

				& > * {
					&:last-child::after {
						content: none;
					}
					&::after {
						@extend %middot;
					}
				}
			}
		}
	}
}

.profile-nav {
	display: flex;
	width: 100%;
	flex-wrap: wrap;
	list-style-type: none;
	margin: 0;
	font-size: 0.8rem;
	font-weight: 600;
	background-color: rgba(0,0,0,0.15);

	.profile-nav-item {
		flex: 1 1 auto;
		display: inline-block;
		color: $tertiary-grey;
		text-align: center;
		text-transform: uppercase;
		overflow: hidden;
		a {
			display: block;
			padding: 0.5rem;
			color: $tertiary-gray;
			box-shadow: 1px 0 0 0 rgba(0,0,0,0.15);
			overflow: hidden;
			text-overflow: ellipsis;
			position: relative;
			white-space: nowrap;

			&.active {
				color: white;
				background: $primary-blue;
				box-shadow: 1px 0 0 0 $primary-blue;
			}
		}
	}

}

.group {
	.profile-nav {
		background-color: rgba(0,0,0,0.35);
	}
}

.profile .empty-list.user-details {
	margin: 0.25rem 0;
	&, h1 {
		font-family: $body-font-family;
		color: $tertiary-grey;
	}
}

@media screen and (min-width: 500px) {
	.profile-head {
		.user {
			display: flex;

			.profile-avatar-container {
				float: none;
				margin: 0;
				max-width: 180px;
				width: 180px;
				flex: 0 0.5 180px;
			}

			.profile-head-summary {
				flex: 1 1 auto;
			}
		}

		.profile-head-summary-attrs {
			margin: 0;
			li {
				white-space: nowrap;
				overflow: hidden;
				text-overflow: ellipsis;
			}
		}
	}

	.user-profile {
		.profile-nav {
			position: absolute;
			bottom: 0;
			left: 184px;
			right: 0;
		}

	}

	.profile-nav {
		flex-wrap: nowrap;

		.profile-nav-item {
			flex: 0 1 auto !important;

			a {
				padding: 0.5rem 1rem;
			}
		}
	}

	.profile-head-summary {
		margin-bottom: 2.5rem;
	}
}

